# Stock_Market_TS_Prediction

./: .gitignore  ARIMA.ipynb  CNN.ipynb  CNN.py  README.md  RNN.ipynb  clustering.ipynb  clustering.py  dataAnalysis.ipynb  featureEngineering.ipynb  movingAverage.ipynb  outlierAnalysis.ipynb  pyproject.toml  requirements.txt  stationarityAnalysis.ipynb
models/: AMZN_IBM.ipynb  LSTM Luca.ipynb  LSTM.ipynb  LSTM.py  LSTM_AMZ.ipynb  LSTM_CNN.ipynb  LSTM_feature_enhanced.ipynb  not_stationarity_v1.ipynb  stationnarity_v1.ipynb  time-series-forecasting-using-deep-learning-model.ipynb
models/scripts/: utils.py
scripts/: utils.py
