[tool.poetry]
name = "stock-market-ts-prediction"
version = "0.1.0"
description = ""
authors = ["Nicola Cecere <nicola.cecere@mail.polimi.it>"]
readme = "README.md"
packages = [{include = "stock_market_ts_prediction"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.1.3"
seaborn = "^0.13.0"
optuna = "^3.4.0"
tensorflow = "^2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
